# ado-wrapper

./: .gitignore  CHANGELOG.md  README.md  __main__.py  branches.py  build.py  builds.py  client.py  commits.py  examples.md  generate_type_hints.py  main.py  member.py  members.py  pull_requests.py  pyproject.toml  release.py  repository copy.py  repository.py  requirements.txt  script.py  state_managed_abc.py  state_management_requirements.md  state_manager.py  teams.py  todo.md  users.py  utils.py  variable_groups.py
ado_wrapper/: __main__.py  client.py  dumps.py  state_managed_abc.py  state_manager.py  utils.py
azuredevops/: __init__.py  __main__.py  client.py  dumps.py  generate_type_hints.py  state_managed_abc.py  state_manager.py  utils.py
plan_resources/: __init__.py  mapping.py  plan_repo.py  singletons.py
resources/: __init__.py  branches.py  builds.py  commits.py  groups.py  projects.py  pull_requests.py  release.py  releases.py  repo.py  teams.py  users.py  variable_groups.py
tests/: build_definition_templates.py  setup_client.py  test_agent_pools.py  test_annotated_tags.py  test_artifacts.py  test_audit_logs.py  test_branch.py  test_build.py  test_build_definition.py  test_client.py  test_commit.py  test_environment.py  test_group.py  test_integrations.py  test_merge_policy.py  test_organisation.py  test_permission.py  test_project.py  test_project_settings.py  test_pull_request.py  test_pull_requests.py  test_release.py  test_releases.py  test_repo.py  test_repo_user_perms.py  test_runs.py  test_search.py  test_service_endpoint.py  test_service_endpoints.py  test_state.py  test_state_managed_abc.py  test_state_manager.py  test_team.py  test_user.py  test_users.py  test_variable_group.py  test_variable_groups.py  test_zzz_cleanup.py
(+40 files in other folders)
